0.1.0-beta.65 fix: page number not centred tweaks: -change settings default value -sync before update

--- a/src/stackScreen/read/menu.scss
+++ b/src/stackScreen/read/menu.scss
@@ -150,6 +150,7 @@
   h3 {
     padding: 0;
     margin: 0;
+    padding-right: 2rem;
   }
 
   .sliderWrapper {
